corpus/interop/interop.h


typedef struct SubChainHeader {
    SubChainKind sType;
    struct SubChainHeader *next;
} SubChainHeader;
int32_t subChainPayloadValue(SubChainHeader *chain);
typedef struct SubBufferView {
    const uint32_t *items;
    size_t count;
} SubBufferView;
typedef struct SubStringView {
    const char *data;
    size_t len;
} SubStringView;
typedef struct SubCallbackInfo {
    SubLogCallback callback;
    void *userdata;
    void *userparam;
} SubCallbackInfo;
typedef struct SubDevice_T *SubDevice;
SubDevice subDeviceCreate(SubChainHeader *chain);
void subDeviceRetain(SubDevice device);
void subDeviceRelease(SubDevice device);
void subDeviceSubmit(SubDevice device, SubBufferView commands);
void subDeviceSetLogger(SubDevice device, SubCallbackInfo logger);
void subDeviceSetLabel(SubDevice device, SubStringView label);
int32_t subDevicePoll(int32_t attempt);
typedef struct SubSliceF32 {
    const float *items;
    size_t count;
} SubSliceF32;
typedef struct SubSliceI32 {
    const int32_t *items;
    size_t count;
} SubSliceI32;
typedef struct SubSliceF64 {
    const double *items;
    size_t count;
} SubSliceF64;
typedef struct SubSliceI64 {
    const int64_t *items;
    size_t count;
} SubSliceI64;
typedef struct SubSliceU8 {
    const uint8_t *items;
    size_t count;
} SubSliceU8;
typedef struct SubSliceI8 {
    const int8_t *items;
    size_t count;
} SubSliceI8;
typedef struct SubSliceU16 {
    const uint16_t *items;
    size_t count;
} SubSliceU16;
typedef struct SubSliceI16 {
    const int16_t *items;
    size_t count;
} SubSliceI16;
typedef struct SubSliceF16 {
    const SubFloat16 *items;
    size_t count;
} SubSliceF16;
int32_t subSliceChecksumF32(SubSliceF32 data);
int32_t subSliceChecksumI32(SubSliceI32 data);
int32_t subSliceChecksumF64(SubSliceF64 data);
int32_t subSliceChecksumI64(SubSliceI64 data);
int32_t subSliceChecksumU8(SubSliceU8 data);
int32_t subSliceChecksumI8(SubSliceI8 data);
int32_t subSliceChecksumU16(SubSliceU16 data);
int32_t subSliceChecksumI16(SubSliceI16 data);
int32_t subSliceChecksumF16(SubSliceF16 data);
typedef uint64_t SubAccess;
int32_t subAccessMatches(SubAccess mask, SubAccess required);
typedef struct SubDrawList {
    uint32_t layer;
    size_t drawsCount;
    const uint32_t *draws;
} SubDrawList;
int32_t subDrawListTotal(SubDrawList list);
int32_t subBulkConsume(const void *data, size_t size);
int32_t subBulkConsumeF32(SubSliceF32 data);
typedef struct SubCompletionInfo {
    SubLogCallback callback;
    void *userdata;
} SubCompletionInfo;
void subDeviceOnComplete(SubDevice device, SubCompletionInfo info);
void subDevicePump(SubDevice device);
typedef struct SubCommandBuffer {
    uint32_t queue;
    size_t commandsCount;
    const uint32_t *commands;
} SubCommandBuffer;
int32_t subCommandBufferTotal(SubCommandBuffer buf);
typedef SubStageBits SubStageFlags;
int32_t subStageMatches(SubStageFlags mask, SubStageFlags required);
typedef struct SubFuture {
    uint64_t id;
} SubFuture;
typedef struct SubStats {
    uint64_t submitted;
    uint64_t completed;
    uint64_t pending;
} SubStats;
SubFuture subFutureMake(uint32_t request);
SubStats subStatsMake(uint32_t base);
typedef struct SubQueryStatus {
    uint64_t future;
    int32_t completed;
} SubQueryStatus;
void subDeviceQuery(SubDevice device, uint32_t request, SubQueryStatus *status);
typedef struct SubWaitList {
    SubWaitEntry *entries;
    size_t count;
} SubWaitList;
SubFuture subDeviceKickAsync(SubDevice device, uint32_t request, SubCallbackInfo info);
void subDeviceWait(SubDevice device, SubWaitList waits);
uint32_t subDeviceSumBytes(size_t dataCount, const uint8_t *data);
void subDeviceFillBytes(size_t dataCount, uint8_t *data);
void subDeviceFillShorts(size_t dataCount, uint16_t *data);
typedef struct SubBoundaryStringRecord {
    SGPUStringView label;
    uint64_t handle;
    bool enabled;
    uint64_t serial;
    uint64_t generation;
} SubBoundaryStringRecord;
uint64_t subBoundaryStringCheck(const SubBoundaryStringRecord *record, uint32_t selector);
void subBoundaryStringFill(SubBoundaryStringRecord *record, bool emptyLabel);
typedef struct SGPUProbeTextureDescriptor {
    SGPUStringView label;
    SGPUProbeExtent3D extent;
    size_t viewFormatsCount;
    const SGPUProbeFormat *viewFormats;
    SGPUProbeFormat format;
    uint32_t mipLevelCount;
    uint32_t sampleCount;
    uint32_t dimension;
    uint32_t usage;
} SGPUProbeTextureDescriptor;
uint64_t subProbeTextureDescriptorCheck(
    const SGPUProbeTextureDescriptor *descriptor,
    uint32_t selector);
void subProbeTextureDescriptorFill(SGPUProbeTextureDescriptor *descriptor);
typedef struct SubProbePipelineLayoutDescriptor {
    SGPUStringView label;
    size_t bindGroupLayoutsCount;
    const SubDevice *bindGroupLayouts;
} SubProbePipelineLayoutDescriptor;
uint64_t subProbePipelineLayoutCheck(
    const SubProbePipelineLayoutDescriptor *descriptor,
    uint32_t selector);
typedef struct SubProbeBindGroupEntry {
    uint32_t binding;
    _Nullable SubDevice buffer;
    SubDevice _Nullable sampler;
    SubDevice _Nullable textureView;
} SubProbeBindGroupEntry;
uint32_t subProbeBindGroupEntryCheck(const SubProbeBindGroupEntry *entry);
void subProbeBindGroupEntryFill(
    SubProbeBindGroupEntry *entry,
    uint32_t selected,
    SubDevice handle);
typedef struct SGPUProbeComputePipelineDescriptor {
    SGPUStringView label;
    SGPUProbeComputeState compute;
    uint32_t flags;
} SGPUProbeComputePipelineDescriptor;
uint64_t subProbeComputePipelineCheck(
    const SGPUProbeComputePipelineDescriptor *descriptor,
    uint32_t selector);
typedef struct SGPUProbeRenderPipelineDescriptor {
    SGPUStringView label;
    SGPUProbeVertexState vertex;
    uint32_t primitive;
} SGPUProbeRenderPipelineDescriptor;
uint64_t subProbeRenderPipelineCheck(
    const SGPUProbeRenderPipelineDescriptor *descriptor,
    uint32_t selector);
typedef struct SGPUProbeProgrammableStage {
    size_t constantsCount;
    const SGPUProbeConstantEntry *constants;
    uint32_t stage;
} SGPUProbeProgrammableStage;
uint64_t subProbeProgrammableStageCheck(
    const SGPUProbeProgrammableStage *stage,
    uint32_t selector);
typedef struct SGPUProbeFullRenderPipelineDescriptor {
    SGPUStringView label;
    const SGPUProbeFragmentState * _Nullable fragment;
} SGPUProbeFullRenderPipelineDescriptor;
uint64_t subProbeFullRenderPipelineCheck(
    const SGPUProbeFullRenderPipelineDescriptor *descriptor,
    uint32_t selector);
typedef struct SGPUProbeHandleRenderPipelineDescriptor {
    SGPUStringView label;
    const SGPUProbeHandleFragmentState * _Nullable fragment;
} SGPUProbeHandleRenderPipelineDescriptor;
uint64_t subProbeFullRenderPipelineWithHandleCheck(
    const SGPUProbeHandleRenderPipelineDescriptor *descriptor,
    uint32_t selector);
typedef struct SGPUProbeNestedRenderPipelineDescriptor {
    SGPUStringView label;
    const SGPUProbeNestedFragmentState * _Nullable fragment;
} SGPUProbeNestedRenderPipelineDescriptor;
uint64_t subProbeFullRenderPipelineWithNestedBlendCheck(
    const SGPUProbeNestedRenderPipelineDescriptor *descriptor,
    uint32_t selector);
typedef struct SGPUProbeUnmarkedRenderPipelineDescriptor {
    SGPUStringView label;
    const SGPUProbeUnmarkedFragmentState * _Nullable fragment;
} SGPUProbeUnmarkedRenderPipelineDescriptor;
uint64_t subProbeFullRenderPipelineWithUnmarkedBlendCheck(
    const SGPUProbeUnmarkedRenderPipelineDescriptor *descriptor,
    uint32_t selector);
typedef struct SGPUProbeBreadthRenderPipelineDescriptor {
    SGPUStringView label;
    const SGPUProbeBreadthDepthStencilState * _Nullable depthStencil;
    SGPUProbeBreadthPrimitiveState primitive;
    const SGPUProbeBreadthFragmentState * _Nullable fragment;
} SGPUProbeBreadthRenderPipelineDescriptor;
uint64_t subProbeBreadthRenderPipelineCheck(
    const SGPUProbeBreadthRenderPipelineDescriptor *descriptor,
    uint32_t selector);
typedef struct SGPUProbeWideRenderPipelineDescriptor {
    SGPUStringView label;
    SubDevice _Nullable layout;
    SGPUProbeWideVertexState vertex;
    SGPUProbeWidePrimitiveState primitive;
    const SGPUProbeWideDepthStencilState *depthStencil;
    SGPUProbeWideMultisampleState multisample;
    const SGPUProbeWideFragmentState *fragment;
} SGPUProbeWideRenderPipelineDescriptor;
uint64_t subProbeWideRenderPipelineCheck(
    const SGPUProbeWideRenderPipelineDescriptor *descriptor,
    uint32_t selector);
uint64_t subProbeQueueSubmitCheck(
    SubDevice queue,
    size_t commandsCount,
    const SubDevice *commands,
    uint32_t selector);
uint32_t subProbeSetBindGroupCheck(
    SubDevice encoder,
    SubDevice _Nullable group);
typedef struct SubByValueI32One {
    int32_t a;
} SubByValueI32One;
typedef struct SubByValueI32Pair {
    int32_t x;
    int32_t y;
} SubByValueI32Pair;
typedef struct SubByValueI32Triple {
    int32_t a;
    int32_t b;
    int32_t c;
} SubByValueI32Triple;
typedef struct SubByValueI16I16I32 {
    int16_t a;
    int16_t b;
    int32_t c;
} SubByValueI16I16I32;
typedef struct SubByValueU8Four {
    uint8_t a;
    uint8_t b;
    uint8_t c;
    uint8_t d;
} SubByValueU8Four;
typedef struct SubByValueI64Pair {
    int64_t a;
    int64_t b;
} SubByValueI64Pair;
typedef struct SubByValueF32Hfa2 {
    float a;
    float b;
} SubByValueF32Hfa2;
typedef struct SubByValueF32Hfa4 {
    float a;
    float b;
    float c;
    float d;
} SubByValueF32Hfa4;
typedef struct SubByValueI32F32 {
    int32_t a;
    float b;
} SubByValueI32F32;
typedef struct SubByValueI32I64 {
    int32_t a;
    int64_t b;
} SubByValueI32I64;
typedef struct SubByValueI64Triple {
    int64_t a;
    int64_t b;
    int64_t c;
} SubByValueI64Triple;
void subByValueI32OneReport(
    SubByValueI32One *report,
    SubByValueI32One value);
void subByValueI32PairReport(
    SubByValueI32Pair *report,
    SubByValueI32Pair value);
void subByValueI32TripleReport(
    SubByValueI32Triple *report,
    SubByValueI32Triple value);
void subByValueI16I16I32Report(
    SubByValueI16I16I32 *report,
    SubByValueI16I16I32 value);
void subByValueU8FourReport(
    SubByValueU8Four *report,
    SubByValueU8Four value);
void subByValueI64PairReport(
    SubByValueI64Pair *report,
    SubByValueI64Pair value);
void subByValueF32Hfa2Report(
    SubByValueF32Hfa2 *report,
    SubByValueF32Hfa2 value);
void subByValueF32Hfa4Report(
    SubByValueF32Hfa4 *report,
    SubByValueF32Hfa4 value);
void subByValueI32F32Report(
    SubByValueI32F32 *report,
    SubByValueI32F32 value);
void subByValueI32I64Report(
    SubByValueI32I64 *report,
    SubByValueI32I64 value);
void subByValueI64TripleReport(
    SubByValueI64Triple *report,
    SubByValueI64Triple value);
typedef struct SubHostOwnedState_T *SubHostOwnedState;
SubHostOwnedState subHostOwnedStateCreate(void);
void subHostOwnedStateDestroy(SubHostOwnedState state);
SubHostOwnedState subHostOwnedStateBorrow(void);
int32_t subHostOwnedStateAdvance(SubHostOwnedState state);
typedef struct SubRequestInfo {
    SubLogCallback callback;
    void *userdata;
    void *userparam;
} SubRequestInfo;
int32_t subRequestStart(
    SubDevice device,
    uint32_t payload,
    int32_t immediate,
    SubRequestInfo info);
int32_t subRequestSubscribe(SubDevice device, SubRequestInfo info);
void subRequestNotify(SubDevice device, uint32_t payload);
void subRequestUnsubscribe(SubDevice device);
void subRequestPump(SubDevice device);
void subRequestReleaseActive(SubDevice device);
int32_t subRequestReleaseCount(SubDevice device);
void subRequestMarkCharge(SubDevice device);
int32_t subRequestChargeFellBy(SubDevice device, uint32_t atLeast);
void subRequestReleaseAndRefire(SubDevice device);