corpus/interop/external-device.h


SubDevice subExternalDeviceIdentity(SubDevice device);
uint32_t subExternalDeviceTag(SubDevice device, uint32_t tag);