codegen/tests/support/native_fixture.rs

//! Native-library description for the synthetic interop test fixture.

// MSVC cannot compile the fixture's `_Float16` boundary (compiler.md §11c).
// Callers must obtain a fixture before they can use its native symbols.

/// A native fixture that this configuration can run.
pub struct Fixture {
    #[cfg(all(windows, target_env = "msvc"))]
    unavailable: Unavailable,
}

#[cfg(all(windows, target_env = "msvc"))]
enum Unavailable {}

/// Returns no fixture when the host C compiler cannot compile it.
pub fn fixture() -> Option<Fixture> {
    #[cfg(all(windows, target_env = "msvc"))]
    {
        None
    }
    #[cfg(not(all(windows, target_env = "msvc")))]
    {
        Some(Fixture {})
    }
}

// Naming the dev-dependency propagates its test-only native archive into
// this integration-test link.
#[cfg(not(all(windows, target_env = "msvc")))]
extern crate subscript_interop_fixture;

use subscript_codegen::NativeLibrary;

// The fixture crate compiles the implementation into this test process.
// Only addresses are taken here; generated code calls them through the C
// signatures declared by the committed mirror.
#[cfg(not(all(windows, target_env = "msvc")))]
extern "C" {
    fn subChainPayloadValue();
    fn subDeviceCreate();
    fn subDeviceRetain();
    fn subDeviceRelease();
    fn subDeviceSubmit();
    fn subDeviceSetLogger();
    fn subDeviceSetLabel();
    fn subDevicePoll();
    fn subSliceChecksumF32();
    fn subSliceChecksumI32();
    fn subSliceChecksumF64();
    fn subSliceChecksumI64();
    fn subSliceChecksumU8();
    fn subSliceChecksumI8();
    fn subSliceChecksumU16();
    fn subSliceChecksumI16();
    fn subSliceChecksumF16();
    fn subDrawListTotal();
    fn subAccessMatches();
    fn subBulkConsume();
    fn subBulkConsumeF32();
    fn subDeviceOnComplete();
    fn subDevicePump();
    fn subCommandBufferTotal();
    fn subStageMatches();
    fn subFutureMake();
    fn subStatsMake();
    fn subDeviceQuery();
    fn subDeviceKickAsync();
    fn subDeviceWait();
    fn subDeviceSumBytes();
    fn subDeviceFillBytes();
    fn subDeviceFillShorts();
    fn subBoundaryStringCheck();
    fn subBoundaryStringFill();
    fn subProbeTextureDescriptorCheck();
    fn subProbeTextureDescriptorFill();
    fn subProbePipelineLayoutCheck();
    fn subProbeBindGroupEntryCheck();
    fn subProbeBindGroupEntryFill();
    fn subProbeComputePipelineCheck();
    fn subProbeRenderPipelineCheck();
    fn subProbeProgrammableStageCheck();
    fn subProbeFullRenderPipelineCheck();
    fn subProbeFullRenderPipelineWithHandleCheck();
    fn subProbeFullRenderPipelineWithNestedBlendCheck();
    fn subProbeFullRenderPipelineWithUnmarkedBlendCheck();
    fn subProbeBreadthRenderPipelineCheck();
    fn subProbeWideRenderPipelineCheck();
    fn subProbeQueueSubmitCheck();
    fn subProbeSetBindGroupCheck();
    fn subByValueI32OneReport();
    fn subByValueI32PairReport();
    fn subByValueI32TripleReport();
    fn subByValueI16I16I32Report();
    fn subByValueU8FourReport();
    fn subByValueI64PairReport();
    fn subByValueF32Hfa2Report();
    fn subByValueF32Hfa4Report();
    fn subByValueI32F32Report();
    fn subByValueI32I64Report();
    fn subByValueI64TripleReport();
    fn subHostOwnedStateCreate();
    fn subHostOwnedStateDestroy();
    fn subHostOwnedStateBorrow() -> *mut std::ffi::c_void;
    fn subHostOwnedStateAdvance(state: *mut std::ffi::c_void) -> i32;
    fn subHostOwnedStatePreEntry(ctx: *mut std::ffi::c_void);
    fn subHostOwnedStatePostRun(ctx: *mut std::ffi::c_void);
    fn subExternalDeviceIdentity();
    fn subExternalDeviceTag();
    fn subWireModeNext();
    fn subWireModeEcho();
    fn subWireModeUnknown();
    fn subBindToneNext();
    fn subBindToneEcho();
    fn subWireModeRecordEchoMode();
    fn subWireModeRecordEchoTone();
    fn subWireModeRecordEchoElement();
    fn subWireModeRecordFill();
    fn subWireModeRecordFillUnknown();
    fn subRequestStart();
    fn subRequestSubscribe();
    fn subRequestNotify();
    fn subRequestUnsubscribe();
    fn subRequestPump();
    fn subRequestReleaseActive();
    fn subRequestReleaseCount();
    fn subRequestMarkCharge();
    fn subRequestChargeFellBy();
    fn subRequestReleaseAndRefire();
}

impl Fixture {
    /// Runs the fixture's ship-tier pre-entry hook for a dev-tier session.
    // This shared support module is also compiled into test targets that use
    // only `library`, so the lifecycle helpers are intentionally unused there.
    #[allow(dead_code)]
    pub fn host_owned_state_pre_entry(&self) {
        #[cfg(all(windows, target_env = "msvc"))]
        {
            match self.unavailable {}
        }
        #[cfg(not(all(windows, target_env = "msvc")))]
        {
            // SAFETY: the fixture hook ignores the Context argument and creates its
            // own state. The linked function has the declared C signature.
            unsafe { subHostOwnedStatePreEntry(std::ptr::null_mut()) };
        }
    }

    /// Borrows the fixture state, advances it once, and returns its handle.
    // Some test targets use only the native library.
    #[allow(dead_code)]
    pub fn host_owned_state_borrow_and_advance(&self) -> *mut std::ffi::c_void {
        #[cfg(all(windows, target_env = "msvc"))]
        {
            match self.unavailable {}
        }
        #[cfg(not(all(windows, target_env = "msvc")))]
        {
            // SAFETY: the caller starts the fixture lifecycle first. The fixture owns
            // the returned state until the paired post-run hook destroys it.
            let state = unsafe { subHostOwnedStateBorrow() };
            // SAFETY: `state` is the live handle returned by the fixture.
            let _ = unsafe { subHostOwnedStateAdvance(state) };
            state
        }
    }

    /// Runs the fixture's ship-tier post-run hook for a dev-tier session.
    // This shared support module is also compiled into test targets that use
    // only `library`, so the lifecycle helpers are intentionally unused there.
    #[allow(dead_code)]
    pub fn host_owned_state_post_run(&self) {
        #[cfg(all(windows, target_env = "msvc"))]
        {
            match self.unavailable {}
        }
        #[cfg(not(all(windows, target_env = "msvc")))]
        {
            // SAFETY: paired with `host_owned_state_pre_entry`; the fixture hook
            // ignores the Context argument, destroys its state, and clears its slot.
            unsafe { subHostOwnedStatePostRun(std::ptr::null_mut()) };
        }
    }

    /// Returns the native-library inputs for the committed interop fixture.
    pub fn library(&self) -> NativeLibrary {
        #[cfg(all(windows, target_env = "msvc"))]
        {
            match self.unavailable {}
        }
        #[cfg(not(all(windows, target_env = "msvc")))]
        {
            use std::path::PathBuf;
